fixed ramanujanNumbers